<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="player1">1 Player</string>
    <string name="player2">2 Player</string>
    <string name="player_win">Player %s win!</string>
    <string name="draw_game">Draw game!</string>
    <string name="sound">Sound</string>
    <string name="level">Level %d</string>
    <string name="statistics">Statistics</string>
    <string name="win_count">Win count</string>
    <string name="user">User</string>
    <string name="comp">Computer</string>
    <string name="draw">Draw</string>
    <string name="reset">Reset</string>
</resources>
