<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.itstep.falaleev.tictactoe.StatActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_count"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:id="@+id/tvWinUser"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:id="@+id/tvDraw"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:id="@+id/tvWinComp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/button"
        android:onClick="resetStat"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/reset_margin_top" />

</LinearLayout>
